<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rate">

    <ImageView
        android:id="@+id/imageView39"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cross_icon"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline485"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView258"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/enter_label_size"
        android:textColor="@color/pro_color"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/pdf_bg"
        app:layout_constraintEnd_toStartOf="@+id/guideline485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView258">

        <EditText
            android:id="@+id/width"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/pdf_bg"
            android:baselineAligned="false"
            android:fontFamily="@font/abril_fatface"
            android:hint="@string/width_inch"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="#707070"
            android:textSize="@dimen/_10sdp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/pdf_bg"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline485"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3">

        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/pdf_bg"
            android:fontFamily="@font/abril_fatface"
            android:hint="@string/height_inch"
            android:inputType="numberDecimal"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="#707070"
            android:textSize="@dimen/_10sdp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <TextView
        android:id="@+id/print_btn"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/prnt_btn_bg"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="@string/create_sheet"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/textView262"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reset"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/print_btn"
        app:layout_constraintStart_toStartOf="@+id/print_btn"
        app:layout_constraintTop_toBottomOf="@+id/print_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>