<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rate">

    <ImageView
        android:id="@+id/imageView42"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cross_icon"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline497"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <TextView
        android:id="@+id/print_btn"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/prnt_btn_bg"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/save_single_label"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView268"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/or"
        android:textColor="#1E2939"
        app:layout_constraintEnd_toStartOf="@+id/guideline497"
        app:layout_constraintStart_toStartOf="@+id/guideline497"
        app:layout_constraintTop_toBottomOf="@+id/print_btn" />

    <View
        android:id="@+id/view8"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginEnd="2dp"
        android:background="#2B535353"
        app:layout_constraintBottom_toBottomOf="@+id/textView268"
        app:layout_constraintEnd_toStartOf="@+id/textView268"
        app:layout_constraintStart_toStartOf="@+id/print_btn"
        app:layout_constraintTop_toTopOf="@+id/textView268" />

    <View
        android:id="@+id/view9"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="2dp"
        android:background="#2B535353"
        app:layout_constraintBottom_toBottomOf="@+id/textView268"
        app:layout_constraintEnd_toEndOf="@+id/print_btn"
        app:layout_constraintStart_toEndOf="@+id/textView268"
        app:layout_constraintTop_toTopOf="@+id/textView268" />

    <TextView
        android:id="@+id/print_btn2"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/prnt_btn_bg"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/save_label_sheet"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/print_btn"
        app:layout_constraintStart_toStartOf="@+id/print_btn"
        app:layout_constraintTop_toBottomOf="@+id/textView268" />

</androidx.constraintlayout.widget.ConstraintLayout>