<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:id="@+id/gridViewItem"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#fff"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1.4142"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F5F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F5F5F5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/arrow_back"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/home_btn"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/images"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/home_run" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline501"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".33" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline524"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".66" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:layout_constraintBottom_toBottomOf="@+id/gallery_iv"
                app:layout_constraintEnd_toStartOf="@+id/imageView43"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/gallery_iv"
                app:layout_constraintTop_toTopOf="@+id/gallery_iv"
                app:srcCompat="@drawable/pdf_file"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/gallery_iv"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="start"
                app:layout_constraintBottom_toBottomOf="@+id/back_btn"
                app:layout_constraintEnd_toStartOf="@+id/imageView11"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/back_btn"
                app:layout_constraintTop_toTopOf="@+id/back_btn"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/images"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView43"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                app:layout_constraintBottom_toTopOf="@+id/textView271"
                app:layout_constraintEnd_toStartOf="@+id/home_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="@+id/imageView11"
                app:srcCompat="@drawable/ic_round_screen_share_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/gallery_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/save_to_gallery"
                android:textColor="@color/black"
                android:textSize="@dimen/_7sdp"
                app:layout_constraintEnd_toEndOf="@+id/gallery_iv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@+id/gallery_iv"
                app:layout_constraintTop_toBottomOf="@id/gallery_iv" />

            <TextView
                android:id="@+id/textView271"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/save_in_pdf"
                android:textColor="@color/black"
                android:textSize="@dimen/_7sdp"
                app:layout_constraintEnd_toEndOf="@+id/imageView11"
                app:layout_constraintStart_toStartOf="@+id/imageView11"
                app:layout_constraintTop_toBottomOf="@+id/imageView11" />

            <TextView
                android:id="@+id/textView269"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abril_fatface"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="@dimen/_7sdp"
                app:layout_constraintEnd_toEndOf="@+id/imageView43"
                app:layout_constraintStart_toStartOf="@+id/imageView43"
                app:layout_constraintTop_toBottomOf="@+id/imageView43" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>